# Meshpay

./: .gitignore  CMakeLists.txt  MeshPay.md  UI.md  monnai.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  specs.md
components/comm/comm_protocol/: CMakeLists.txt
components/comm/comm_protocol/include/comm/: comm_event.h  comm_msg.h
components/comm/comm_protocol/src/: comm_msg.c
components/comm/comm_protocol/test/: test_comm_msg_ack.c  test_comm_msg_announce.c  test_comm_msg_attestation.c  test_comm_msg_broadcast.c  test_comm_msg_dag_sync.c  test_comm_msg_ping_pong.c  test_comm_msg_set_alias.c  test_comm_msg_set_beneficiary.c  test_comm_msg_time_sync.c
components/comm/espnow/: CMakeLists.txt
components/comm/espnow/include/comm/: espnow.h  espnow_hal.h  nonce_cache.h
components/comm/espnow/mock/: espnow_hal_mock.c  espnow_hal_mock.h
components/comm/espnow/src/: espnow.c  espnow_hal_esp32.c  nonce_cache.c
components/comm/espnow/test/: test_nonce_cache.c
components/comm/lora_sync/: CMakeLists.txt
components/comm/lora_sync/include/comm/: lora_frag.h  lora_sync.h  lora_tx_packetize.h
components/comm/lora_sync/src/: lora_frag.c  lora_sync.c  lora_sync_jitter.h  lora_tx_packetize.c
components/comm/lora_sync/test/: test_lora_frag.c  test_lora_sync_jitter.c  test_lora_sync_recovery.c  test_lora_tx_packetize.c
components/core/crypto/: CMakeLists.txt
components/core/crypto/include/crypto/: crypto_hash.h  crypto_init.h  crypto_keys.h  crypto_profile.h  crypto_sign.h  crypto_types.h
components/core/crypto/src/: crypto_hash.c  crypto_init.c  crypto_keys.c  crypto_sign.c
components/core/crypto/test/: test_crypto.c
components/core/dag/: CMakeLists.txt
components/core/dag/include/dag/: dag.h  dag_merge.h  dag_prune.h  dag_validate.h
components/core/dag/src/: dag.c  dag_merge.c  dag_prune.c  dag_validate.c
components/core/dag/test/: test_dag.c
components/core/transaction/: CMakeLists.txt  idf_component.yml
components/core/transaction/include/transaction/: tx_create.h  tx_serialize.h  tx_types.h  tx_validate.h
components/core/transaction/src/: tx_create.c  tx_serialize.c  tx_validate.c
components/core/transaction/test/: test_transaction.c
components/core/tx_lifecycle/: CMakeLists.txt
components/core/tx_lifecycle/include/tx_lifecycle/: tx_lifecycle.h
components/core/tx_lifecycle/src/: tx_lifecycle.c
components/core/tx_lifecycle/test/: test_tx_lifecycle_chaos.c
components/core/wallet/: CMakeLists.txt
components/core/wallet/include/wallet/: wallet.h  wallet_checkpoint.h  wallet_lock.h
components/core/wallet/src/: wallet.c  wallet_checkpoint.c  wallet_lock.c
components/core/wallet/test/: test_wallet.c
components/currency/: CMakeLists.txt  Kconfig
components/currency/include/currency/: currency_config.h  currency_melt.h  currency_rules.h
components/currency/src/: currency_melt.c  currency_rules.c
components/currency/test/: test_currency.c
components/debug_console/: CMakeLists.txt  Kconfig
components/debug_console/include/debug_console/: debug_console.h
components/debug_console/src/: debug_console.c
components/debug_console/test/: test_debug_console.c
components/device_hal/: CMakeLists.txt  Kconfig
components/device_hal/include/hal/: hal_display.h  hal_lora.h  hal_lora_factory.h  hal_power.h  hal_storage.h  hal_types.h
components/device_hal/src/: hal_lora_factory.c  hal_power_stub.c
components/device_hal/src/esp32/: core1262_params.c  core1262_params.h  hal_display_ili9341.c  hal_display_ili9341.h  hal_lora_core1262.c  hal_lora_core1262.h  hal_lora_wio_e5.c  hal_lora_wio_e5.h  hal_storage_esp32.c  hal_storage_esp32.h  sx126x_hal.c  sx126x_hal_context.h
components/device_hal/src/esp32s3/: hal_display_jd9853.c  hal_display_jd9853.h
components/device_hal/src/mock/: hal_display_mock.c  hal_display_mock.h  hal_lora_mock.c  hal_lora_mock.h  hal_storage_mock.c  hal_storage_mock.h
components/device_hal/test/: test_core1262_params.c  test_hal_power.c  test_hal_storage.c
components/time_manager/: CMakeLists.txt
components/time_manager/include/time_manager/: time_manager.h
components/time_manager/src/: time_manager.c
components/time_manager/test/: test_time_manager.c
components/ui/: CMakeLists.txt
components/ui/include/ui/: ui_manager.h  ui_pin.h  ui_screens.h  ui_state.h  ui_theme.h
components/ui/src/: ui_manager.c  ui_pin.c  ui_pin_ledger.c  ui_pin_numpad.c  ui_screen_admin.c  ui_screen_broadcast.c  ui_screen_forward.c  ui_screen_history.c  ui_screen_home.c  ui_screen_message.c  ui_screen_mint.c  ui_screen_pay.c  ui_screen_receive.c  ui_screen_rename.c  ui_screen_scan.c  ui_screen_settings.c  ui_screen_setup.c  ui_task.c  ui_theme.c
components/ui/test/: test_ui_manager.c  test_ui_pin.c
main/: CMakeLists.txt  app_state.c  app_state.h  balance.c  balance.h  core_task.c  core_task.h  currency_config_init.c  currency_config_init.h  dag_glue.c  dag_glue.h  debug_console_dumps.c  debug_console_dumps.h  debug_console_dumps_stub.c  idf_component.yml  main.c  peers.c  peers.h  power_manager.c  power_manager.h  power_manager_stub.c  stack_monitor.c  stack_monitor.h  time_glue.c  time_glue.h  ui_dispatch.c  ui_dispatch.h
main/app_init/: nvs_init.h  nvs_init_plain.c  nvs_init_secure.c
main/handlers/: handler_admin.c  handler_broadcast.c  handler_payment.c  handler_ping_pong.c  handler_time_sync.c  handlers.h
main/ops/: op_beneficiary_forward.c  op_master.c  op_mint.c  op_payment.c  ops.h
main/persistence/: ledger_store.c  ledger_store.h  nvs_alias.c  nvs_alias.h  nvs_beneficiary.c  nvs_beneficiary.h  nvs_checkpoint.c  nvs_checkpoint.h  nvs_keypair.c  nvs_keypair.h  nvs_next_seq.c  nvs_next_seq.h
main/transport/: transport_lora.c  transport_lora.h  transport_lora_stub.c
mockup/: index.html
test_app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
test_app/components/test_power_manager/: CMakeLists.txt  test_power_manager.c
test_app/main/: CMakeLists.txt  idf_component.yml  test_main.c
tools/: capture_panic.sh
tools/cmake/: bump_version.cmake
(+10 files in other folders)
